--- a/themes/toha/i18n/en.toml
+++ b/themes/toha/i18n/en.toml
@@ -12,7 +12,7 @@ other = "İçindekiler"
 other = "-"
 
 [resume]
-other = "Özgeçmişimi indir"
+other = "Özgeçmişimi İndir"
 
 [navigation]
 other = "Menü"
